observability_stuffs/service-tracing/without-auth(basic)/sample-manifests/1-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "20"
  name: mysql
  namespace: trace-quickops
spec:
  serviceName: "mysql"
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      imagePullSecrets: 
        - name: harbor-pull-secret  
      containers:
        - name: mysql
          image: registry.cloudaes.com/quickops-db/mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: init-sql-volume
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: init-sql-volume
          configMap:
            name: mysql-init-config
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
        storageClassName: longhorn

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "20"
  name: mysql
  namespace: trace-quickops
spec:
  ports:
    - port: 3306
      targetPort: 3306
  # clusterIP: None
  selector:
    app: mysql
