observability_stuffs/service-tracing/without-auth(basic)/sample-manifests/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trace-quickops-ingress
  namespace: trace-quickops
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: quickopsfe-service
            port:
              number: 80
      - path: /tracebe(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: quickopsbe-service
            port:
              number: 8083
      - path: /tracego(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: quickopsgo-service
            port:
              number: 8084
